1.7.1 - Change the way icons are loaded to avoid errors - Fix wrapping on uptime - Fix wrong popout URLs

--- a/popup.css
+++ b/popup.css
@@ -207,7 +207,7 @@ tr{
   float:right;
 }
 .uptimeclass{
-  margin-right:7px;
+  margin-right:5px;
   float:right;
 }
 .tooltip {
